# zkcreds-passport-cli

./: .gitignore  Cargo.toml  README.md
src/: issuance_checker.rs  main.rs  params.rs  passport_dump.rs  passport_info.rs  preds.rs
