[package]
name = "zkcreds-passport-cli"
version = "0.1.0"
edition = "2021"
license = "MIT/APACHE-2.0"

[dependencies]
ark-bls12-381 = "0.3"
ark-crypto-primitives = { version = "0.3", features = ["r1cs"], default-features = false }
ark-ec = "0.3"
ark-ed-on-bls12-381 = { version = "0.3", features = ["r1cs"] }
ark-ff = "0.3"
ark-relations = "0.3"
ark-r1cs-std = "0.3"
ark-std = "0.3"
ark-serialize = "0.3"
arkworks-native-gadgets = "0.5"
arkworks-r1cs-gadgets = "0.5"
arkworks-utils = { version = "0.5" }
base64 = "0.13"
byteorder = "1.4"
clap = { version = "3.1", features = [ "derive" ] }
derivative = { version = "2.0", features = ["use_core"] }
lazy_static = "1.4"
rand = "0.8"
rand_core = "0.6"
rsa = { version = "0.5", features = [ "alloc" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
sha2 = "0.10"
x509-parser = "0.13"

[patch.crates-io.ark-crypto-primitives]
git = "https://github.com/arkworks-rs/crypto-primitives.git"
rev = "3402a729b7104983c9779714ab8580de5187bbdd"

[dependencies.zkcreds]
git = "ssh://git@github.com/rozbb/zkcreds-rs"
rev = "18bfdf315a61dc212b1d677ac3346bff7657b68e"

[dev-dependencies]
